# ZK-energy-trading-in-RISC0

./: .env.example  .gitignore  .gitmodules  README.md  foundry.toml
apps/: Cargo.toml  runningApp_main.sh
apps/src/: main.rs
contracts/scripts/: Deploy.s.sol  runningScript_Deploy.sh
contracts/src/: EnergyAggregator.sol  EnergyConsumer.sol  EnergyProducer.sol  IEnergyAggregator.sol  Prosumer.sol
contracts/src/utils/: DataTypes.sol
contracts/test/: EnergyAggregator.t.sol  runningTest_EnergyAggregator.sh
guests/: Cargo.toml  build.rs
guests/is-smart-meter/: Cargo.toml
guests/is-smart-meter/src/: main.rs
guests/smart-meter/: Cargo.toml
guests/smart-meter/src/: main.rs
guests/tests/: is-even.rs  is-smart-meter.rs  runningGuestProgram_smart-meter.sh  smart-meter.rs
