[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
risc0-ethereum-contracts = { workspace = true }
sha2 = "0.10.8"
hex = "0.4"

[build-dependencies]
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }

[package.metadata.risc0]
methods = ["is-smart-meter"]
#methods = ["is-even"]
