[package]
name = "is-smart-meter"
#name = "is-even"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
risc0-zkvm = { version = "1.2.0-rc.1", default-features = false, features = ["std"] }
sha2 = "0.10.8"
hex = "0.4"
clap = { version = "4.5.32" }

[profile.release]
debug = 1
lto = "thin"
